fix: wrap logos on desktop

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -981,7 +981,7 @@ button:focus {
 
     footer .logos {
         align-items: center;
-        flex-direction: row;
+        flex-flow: row wrap;
     }
 
     footer .logos.idrc-ocadu {
